# SD-LoRA-Manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  comfyworkflowviewer.h  continueconversationdialog.cpp  continueconversationdialog.h  continueconversationdialog.ui  fileutils.h  llmpromptwidget.cpp  llmpromptwidget.h  llmpromptwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelnotedialog.cpp  modelnotedialog.h  modelnotedialog.ui  pathlistdialog.cpp  pathlistdialog.h  pathlistdialog.ui  promptparserwidget.cpp  promptparserwidget.h  promptparserwidget.ui  prompttemplatelibrarywidget.cpp  prompttemplatelibrarywidget.h  prompttemplatelibrarywidget.ui  resources.qrc  styleconstants.h  syncwidget.cpp  syncwidget.h  syncwidget.ui  tableviewstylehelper.cpp  tableviewstylehelper.h  tagbrowserwidget.cpp  tagbrowserwidget.h  tagbrowserwidget.ui  tagflowwidget.h  usageanalysiswidget.cpp  (+1 more)
dialogs/: modelnotedialog.cpp  modelnotedialog.h  modelnotedialog.ui  pathlistdialog.cpp  pathlistdialog.h  pathlistdialog.ui  themeeditordialog.cpp  themeeditordialog.h
pages/: aboutpage.cpp  aboutpage.h  aboutpage.ui  downloadmanager.cpp  downloadmanager.h  downloadmodels.h  downloadspage.cpp  downloadspage.h  downloadspage.ui  launcherwidget.cpp  launcherwidget.h  settingspage.cpp  settingspage.h  settingspage.ui
scripts/: extract_palettes.py  slim_header.py  wd14_tagger.py
styles/: base.qss  dialog.qss  mainwindow.qss  toolpage.qss
styles/themes/: high_contrast_main.qss  high_contrast_tool.qss  light_main.qss  light_tool.qss  midnight_blue_main.qss  midnight_blue_tool.qss
themes/: high_contrast.json  light.json  midnight_blue.json  steam_dark.json
tools/: comfyworkflowviewer.cpp  launcherwidget.cpp  launcherwidget.ui  llmpromptwidget.cpp  llmpromptwidget.h  promptparserwidget.cpp  promptparserwidget.h  promptparserwidget.ui  prompttemplatelibrarywidget.cpp  prompttemplatelibrarywidget.h  prompttemplatelibrarywidget.ui  syncwidget.cpp  tagbrowserwidget.cpp  tagbrowserwidget.h  tagbrowserwidget.ui  usageanalysiswidget.cpp  usageanalysiswidget.h  usageanalysiswidget.ui
utils/: fileutils.cpp  imageloader.h  imagemetadataparser.cpp  imagemetadataparser.h  styleconstants.cpp  styleconstants.h  tableviewstylehelper.cpp  tagutils.cpp  tagutils.h
widgets/: chartwidgets.h  tagflowwidget.h
windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
